# CASE-Utility-SHACL-Inheritance-Reviewer

./: .gitignore  .pre-commit-config.yaml  CODEMETA.yaml  Makefile  README.md  README.md.in  README.md.sed  setup.cfg
.github/workflows/: ci.yml
case_shacl_inheritance_reviewer/: __init__.py
ontology/: shacl-inheritance-review.ttl
tests/: .gitignore  Makefile  PASS_PropertyShape_ontology.ttl  PASS_class_ontology.ttl  PASS_datatype_ontology.ttl  PASS_maxCount_ontology.ttl  PASS_minCount_ontology.ttl  PASS_path_inheritance.ttl  PASS_path_ontology.ttl  PASS_subprop_ontology.ttl  README.md  XFAIL_PropertyShape_inheritance.ttl  XFAIL_PropertyShape_ontology.ttl  XFAIL_class_inheritance.ttl  XFAIL_class_ontology.ttl  XFAIL_datatype_inheritance.ttl  XFAIL_datatype_ontology.ttl  XFAIL_maxCount_inheritance.ttl  XFAIL_maxCount_ontology.ttl  XFAIL_minCount_inheritance.ttl  XFAIL_minCount_ontology.ttl  XFAIL_path_inheritance.ttl  XFAIL_path_ontology.ttl  XFAIL_subprop_inheritance.ttl  XFAIL_subprop_ontology.ttl  ex-constraint-repetition.ttl  ex-triangle-1-1.ttl  ex-triangle-1-2.ttl  ex-triangle-2.ttl  ex-triangle-inheritance.ttl  ex-triangle.ttl  ex_ttl.py  kb-test-2.ttl  kb-test-7.ttl  kb-test-8.ttl  kb-triangle-1.ttl  kb-triangle-2.ttl  kb-triangle-3-super.ttl  kb-triangle-3.ttl  kb-triangle-4.ttl  (+1 more)
