[metadata]
name = case_shacl_inheritance_reviewer
version = attr: case_shacl_inheritance_reviewer.__version__
author = Alex Nelson
author_email = alexander.nelson@nist.gov
description = A utility to review property shape inheritance in ontologies using SHACL
license_files = LICENSE
#TODO - PyPI will need a differently-written README.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/casework/CASE-Utility-SHACL-Inheritance-Reviewer
classifiers =
    Development Status :: 4 - Beta
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
install_requires =
    # TODO - This constraint on pyparsing can be removed when rdflib Issue #1190 is resolved.
    # https://github.com/RDFLib/rdflib/issues/1190
    pyparsing < 3.0.0
    pyshacl
    requests
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    case_shacl_inheritance_reviewer = case_shacl_inheritance_reviewer:main
