[metadata]
name = case_shacl_inheritance_reviewer
version = attr: case_shacl_inheritance_reviewer.__version__
author = Alex Nelson
author_email = alexander.nelson@nist.gov
description = A utility to review property shape inheritance in ontologies using SHACL
license_files = LICENSE
#TODO - PyPI will need a differently-written README.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/casework/CASE-Utility-SHACL-Inheritance-Reviewer
classifiers =
    Development Status :: 4 - Beta
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
install_requires =
    pyshacl
    rdflib >= 6.2.0
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    case_shacl_inheritance_reviewer = case_shacl_inheritance_reviewer:main

[flake8]
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
extend-ignore =
  E203
  E302
  E501

[isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = black
